基本能看的日期、睡眠时间的坐标表

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="no_data">没有有效数据</string>
+    <string name="another_press_to_exit">再按一次退出程序</string>
 </resources>
